# Demo

demo-backend/: __init__.py  app.py  forms.py  models.py  models.py.orig  pyproject.toml  routes.py  routes.py.orig
demo-backend/__pycache__/: app.cpython-310.pyc.orig  models.cpython-310.pyc.orig  routes.cpython-310.pyc.orig
demo-backend/migrations/versions/: 23596d9f598f_add_name_column_to_task_table.py  48c50ba7819c_add_name_column_to_task_table.py  87152264da45_add_name_column_to_task_table.py  a31d72e57c21_initial_migration.py  e22523f40760_add_name_column_to_task_table.py
demo-frontend/: package-lock.json  package.json
demo-frontend/src/: App.js  DateToFromPicker.js  EmployeeDialog.js  Main.js  Menubar.js  Menudrawer.js  Profile.js  ProfileDialog.js  RM.js  Register.js  SignIn.js  TaskCreator.js  TaskTable.js  TeamList.js  index.js  useDidMountEffect.js
