[tool.poetry]
name = "demo-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "demo_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.41"
pytest = "^7.1.3"
flask-sqlalchemy = "^3.0.0"
psycopg2-binary = "^2.9.4"
Flask-Cors = "^3.0.10"
Flask-Migrate = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
